--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -13,7 +13,7 @@
     }
 
     @include breakpoint-down(small) {
-        width: 320px;
+        width: 300px;
         height: 48px;
         margin: 0;
     }
