--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -47,6 +47,9 @@
                 margin-top: 45px;
                 margin-bottom: 51px;
                 margin-left: 30px;
+                width: 218px;
+                height: 247px;
+          
 
                 >svg {
                     width: 218px;
